ゲームを開始する → します

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Phone Rush!!</title>
 </head>
 <body>
-    <button id="sensor_permission">ゲームを開始する</button>
+    <button id="sensor_permission">ゲームを開始します</button>
     <style>
         body {
             margin: 0;
